// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of component <DayAndNightToggle>: should render: 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "className": "sc-fqkwJk ePdnmY",
              },
              "type": "div",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-kAycRU etyDCI",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-gsFSjX kfhihz",
                  },
                  "type": "div",
                },
              ],
              "props": {
                "className": "sc-dcJtft",
              },
              "type": "div",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
              ],
              "props": {
                "className": "sc-jXbVAB",
              },
              "type": "div",
            },
          ],
          "props": {
            "className": "sc-eqUzNf beLJUp",
          },
          "type": "div",
        },
      ],
      "props": {
        "checked": false,
        "className": "sc-gEvDqW dhGSst",
        "onClick": [Function],
        "shadows": true,
        "size": 32,
      },
      "type": "div",
    },
  ],
  "props": {
    "className": "sc-aYaIB dZxTuZ",
    "size": 32,
  },
  "type": "div",
}
`;

exports[`Test of component <DayAndNightToggle>: should all props be passed: 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "className": "sc-fqkwJk ePdnmY",
              },
              "type": "div",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "className": "sc-iGgVNO jhIIpU",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-kAycRU etyDCI",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-gsFSjX kfhihz",
                  },
                  "type": "div",
                },
              ],
              "props": {
                "className": "sc-dcJtft",
              },
              "type": "div",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "className": "sc-imWZod",
                      },
                      "type": "div",
                    },
                  ],
                  "props": {
                    "className": "sc-dhKdPU dxxEnp",
                  },
                  "type": "div",
                },
              ],
              "props": {
                "className": "sc-jXbVAB",
              },
              "type": "div",
            },
          ],
          "props": {
            "className": "sc-eqUzNf beLJUp",
          },
          "type": "div",
        },
      ],
      "props": {
        "checked": false,
        "className": "sc-gEvDqW glhzUP",
        "onClick": [Function],
        "shadows": true,
        "size": 24,
      },
      "type": "div",
    },
  ],
  "props": {
    "className": "sc-aYaIB hnbNJo class_name",
    "size": 24,
  },
  "type": "div",
}
`;
